# math-repl

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  Dockerfile  Doxyfile  README.md
.github/workflows/: ci.yml  package.yml  release.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake
include/repl/: errors.hpp  evaluator.hpp  expression.hpp  repl.hpp  state.hpp  token.hpp
packaging/homebrew/: math-repl.rb
src/: CMakeLists.txt  evaluator.cpp  expression.cpp  main.cpp  state.cpp  token.cpp
tests/: CMakeLists.txt  evaluator_test.cpp  integration_test.cpp  parser_test.cpp  tokenizer_test.cpp
